<resources>
    <string name="app_name">Music Player</string>
    <string name="shuffle_button">Shuffle</string>
    <string name="favourite_button">Favourite</string>
    <string name="playlist_button">Playlist</string>
    <string name="total_songs">Total Songs</string>
    <string name="world_of_music">World of Music</string>
    <string name="song_name">Song Name</string>
    <string name="back_btn">Back</string>
    <string name="start_text">00:00</string>
    <string name="end_text">Loading..</string>
    <string name="repeat_button">Repeat</string>
    <string name="equalizer_button">Equalizer</string>
    <string name="timer_button">Timer</string>
    <string name="share_button">Share</string>
    <string name="open">Open</string>
    <string name="close">close</string>
    <string name="app_icon">Icon</string>
    <string name="text_navigation">Welcome to\nWorld of Music</string>
    <string name="feedback">Feedback</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="song_album">Album</string>
    <string name="min_15">15 Minutes</string>
    <string name="min_30">30 Minutes</string>
    <string name="min_60">60 Minutes</string>
    <string name="search_view">Search View</string>
    <string name="song_image">Song Image</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="playlist_delete">Delete</string>
    <string name="user_name">Your Name</string>
    <string name="add_song">Add</string>
    <string name="remove_all">Remove All</string>
    <string name="search_song">Search song..</string>
    <string name="topic_feedback">Topic i.e. Suggestion, Error, etc</string>
    <string name="email_feedback">Email Address (Optional)</string>
    <string name="send">Send</string>
</resources>