<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10sdp">

    <LinearLayout
        android:id="@+id/min_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:src="@drawable/timer_icon"
            app:tint="@color/color_pink"
            android:layout_margin="@dimen/_8sdp"
            android:contentDescription="@string/min_15" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/min_15"
            android:textColor="@color/black"
            android:textSize="@dimen/_18ssp"
            android:gravity="center_vertical"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/min_30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:src="@drawable/timer_icon"
            app:tint="@color/color_pink"
            android:layout_margin="@dimen/_8sdp"
            android:contentDescription="@string/min_30" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/min_30"
            android:textColor="@color/black"
            android:textSize="@dimen/_18ssp"
            android:gravity="center_vertical"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/min_60"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:src="@drawable/timer_icon"
            app:tint="@color/color_pink"
            android:layout_margin="@dimen/_8sdp"
            android:contentDescription="@string/min_60" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/min_60"
            android:textColor="@color/black"
            android:textSize="@dimen/_18ssp"
            android:gravity="center_vertical"/>

    </LinearLayout>

</LinearLayout>