<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="false"
            android:orientation="vertical">


            <!-- Buttons Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/shuffleButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/shuffle_button"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:drawableTop="@drawable/shuffle"
                    android:text="@string/shuffle_button"
                    android:textColor="@color/black"
                    android:textAllCaps="false" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/favouriteButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/favourite_button"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:drawableTop="@drawable/favourite"
                    android:text="@string/favourite_button"
                    android:textColor="@color/black"
                    android:textAllCaps="false" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/playlistButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/playlist_button"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:drawableTop="@drawable/playlist"
                    android:text="@string/playlist_button"
                    android:textColor="@color/black"
                    android:textAllCaps="false" />

            </LinearLayout>

            <!-- Total Songs TextView -->
            <TextView
                android:id="@+id/totalSongs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_songs"
                android:textColor="@color/black"
                android:layout_margin="@dimen/_10sdp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/musicRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
                android:paddingBottom="@dimen/_70sdp"
                android:scrollbarThumbVertical="@drawable/scroll_bar_icon"/>

        </LinearLayout>
        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/nowPlaying"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:name="com.ganeshsingha.musicplayer.NowPlayingFragment"
            tools:layout = "@layout/fragment_now_playing"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/navigation_header"
        app:menu="@menu/navigation_menu"
        android:fitsSystemWindows="false"/>

</androidx.drawerlayout.widget.DrawerLayout>
