<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlaylistDetails">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/color_pink">

        <ImageButton
            android:id="@+id/backButtonPDA"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/back"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/back_btn"
            android:layout_marginStart="@dimen/_15sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:tint="@color/white"/>

        <TextView
            android:id="@+id/playlistNamePDA"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:text="@string/playlist_button"
            android:textColor="@color/white"
            android:textSize="@dimen/_24ssp"
            android:textStyle="bold"
            android:gravity="center"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayoutDetails"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topLayout"
        android:background="@color/color_pink"
        android:layout_marginTop="@dimen/_5sdp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/playlistImagePDA"
            android:layout_width="@dimen/_180sdp"
            android:layout_height="match_parent"
            android:layout_marginVertical="@dimen/_10sdp"
            android:src="@mipmap/music_player_icon"/>
        <TextView
            android:id="@+id/moreInfoPDA"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/playlist_name"
            android:gravity="center|start"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            android:paddingStart="@dimen/_5sdp"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/playlistDetailsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutDetails"
        android:scrollbarThumbVertical="@drawable/scroll_bar_icon"
        android:scrollbars="vertical"
        android:paddingBottom="@dimen/_170sdp"
        android:layout_marginTop="@dimen/_10sdp"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/shuffleButtonPDA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/shuffle"
        app:iconSize="@dimen/_25sdp"
        app:iconTint="@color/color_pink"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="@dimen/_25sdp"
        android:layout_marginBottom="@dimen/_25sdp"
        app:shapeAppearanceOverlay="@style/full_curved"
        app:strokeWidth="@dimen/_2sdp"
        app:strokeColor="@color/color_pink"
        android:visibility="invisible"/>

        <!-- Buttons Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

<!--          Add Button-->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/addButtonPDA"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/add_song"
                android:background="@color/white"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:drawableLeft="@drawable/add_icon"
                android:text="@string/add_song"
                android:drawableTint="@color/color_pink"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:layout_marginHorizontal="@dimen/_15sdp"
                tools:ignore="RtlHardcoded" />

<!--            Remove Button-->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/removeAllButtonPDA"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:contentDescription="@string/remove_all"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:drawableLeft="@drawable/remove_icon"
                android:drawableTint="@color/color_pink"
                android:text="@string/remove_all"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:layout_marginHorizontal="@dimen/_15sdp"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>